--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <nav class="navbar navbar-fixed-top  navigation " id="top-nav">
                 <a class="navbar-brand" href="#">
-                    <img src="images/logo.png" alt="">
+                    
                 </a>
 
               <button class="navbar-toggler hidden-lg-up float-lg-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" >
@@ -59,7 +59,7 @@
                     <a class="nav-link" href="#about">ABOUT</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#service">SERVICES</a>
+                    <a class="nav-link" href="#service">SKILLS</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contact">CONTACT</a>
@@ -75,49 +75,13 @@
 	            <div class="row">
 	                <div class="col-md-7">
 	                    <div class="block">
-	                        <h1 class="wow fadeInDown" data-wow-delay="0.3s" data-wow-duration=".2s">A free and Open Source Enthusiast</h1>
+	                        <h1 class="wow fadeInDown" data-wow-delay="0.3s" data-wow-duration=".2s">Thinker,Learner,Explorer! Open for new opportunities.</h1>
 	                        <p class="wow fadeInDown" data-wow-delay="0.5s" data-wow-duration=".5s">Site building is in progress! :)</p>
 	                        <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
 	                        	<a class="btn btn-home" href="#about" role="button">About Me</a>
 	                        </div>
 	                    </div>
-	                </div>
-	                <div class="col-md-5 wow zoomIn">
-	                    <div class="block">
-	                        <div class="counter text-center">
-	                            <ul id="countdown_dashboard">
-	                                <li>
-	                                    <div class="dash days_dash">
-	                                        <div class="digit">0</div>
-	                                        <div class="digit">0</div>
-	                                        <div class="digit">0</div>
-	                                        <span class="dash_title">Days</span>
-	                                    </div>
-	                                </li>
-	                                <li>
-	                                    <div class="dash hours_dash">
-	                                        <div class="digit">0</div>
-	                                        <div class="digit">0</div>
-	                                        <span class="dash_title">Hours</span>
-	                                    </div>
-	                                </li>
-	                                <li>
-	                                    <div class="dash minutes_dash">
-	                                        <div class="digit">0</div>
-	                                        <div class="digit">0</div>
-	                                        <span class="dash_title">Minutes</span>
-	                                    </div>
-	                                </li>
-	                                <li>
-	                                    <div class="dash seconds_dash">
-	                                        <div class="digit">0</div>
-	                                        <div class="digit">0</div>
-	                                        <span class="dash_title">Seconds</span>
-	                                    </div>
-	                                </li>
-	                            </ul>
-	                        </div>
-	                    </div>
+
 	                </div>
 	            </div><!-- .row close -->
 	        </div><!-- .container close -->
@@ -134,7 +98,7 @@
                     <div class="col-md-7 col-sm-12 wow fadeInLeft">
                         <div class="content">
                         	<div class="sub-heading">
-                        		<h3>About</h3>
+                        		<h3>Work History</h3>
                         	</div>
                             <p>Experienced Associate with a demonstrated history of working in the non-profit organization management industry. Skilled in Artificial Intelligence, Machine Learning,Supervised and Unsupervised Learning ,R Programming,Python, C Programming, Linux Administration, Arduino . Strong professional with a Bachelor of Technology (BTech) focused in Electronics and Communication from Mahaveer Institute of Science &Technology.</p>
    
@@ -203,7 +167,7 @@
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.3s">
                         <div class="block">
                             <i class="tf-circle-compass"></i>
-                            <h3>Know AI Tools</h3>
+                            <h3>Known AI Tools</h3>
                             <p>Tensorflow,Keras,Pandas,NumPy,matplotib,Scikit-learn,OpenCV,NLPK</p>
                         </div>
                     </div>
