--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                     <div class="col-md-12 wow text-center">
                         <div class="block">
                             <h2> <center>Reach Me Out</center></h2>
-                            <p>Email : theakhilkumarb@gmail.com</p>
-			    <p>Phone : +918977665957</p>
-			    <p>linkedin : linkedin.com/me/theakhilb </p>
+                            <p><center>Email : theakhilkumarb@gmail.com</center></p>
+			    <p><center>Phone : +918977665957</center></p>
+			    <p><center>linkedin : linkedin.com/me/theakhilb </center></p>
                           
                         </div>
                     </div>
