--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="row">
                     <div class="col-md-12 wow text-center">
                         <div class="block">
-                            <h2> <center>Reach Me Out</center></h2>
+                            <center>Reach Me Out</center>
                             <p><center>Email : theakhilkumarb@gmail.com</center></p>
 			    <p><center>Phone : +918977665957</center></p>
 			    <p><center>linkedin : linkedin.com/me/theakhilb </center></p>
