--- a/index.html
+++ b/index.html
@@ -157,15 +157,22 @@
                     <div class="col-sm-6 col-md-3 wow fadeInLeft">
                         <div class="block">
                             <i class="tf-strategy"></i>   
-                            <h3>Known ML Algorithms</h3>
-                            <p>Linear regression,Multiple regression,Naive-Bayes,Adaboost,XGBoost,Decision trees,Random Forest,SVM,KNN,K-Nearest Neigbours,MLP,LSTM,CNN,RNN</p>
+                            <h3>Known Algorithms</h3>
+                            <p>Linear regression,Multiple regression,Naive-Bayes,Adaboost,XGBoost,Decision trees,Random Forest,SVM,KNN,K-Nearest Neigbours,MLP,LSTM,CNN,RNN,BERT</p>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.3s">
                         <div class="block">
                             <i class="tf-circle-compass"></i>
-                            <h3>Known AI Tools</h3>
-                            <p>Tensorflow,Keras,Pandas,NumPy,matplotib,Scikit-learn,OpenCV,NLTK,Spacy,OpenCV,KNIME</p>
+                            <h3>Known Tools</h3>
+                            <p>Tensorflow,Keras,Pandas,NumPy,matplotib,Scikit-learn,OpenCV,NLTK,Spacy,Word2Vec,Doc2Vec,TF-IDF,OpenCV,KNIME,Docker,Kubernetes,Git,</p>
+                        </div>
+                    </div>
+		    <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.3s">
+                        <div class="block">
+                            <i class="tf-circle-compass"></i>
+                        	<h3>DevOps</h3>
+                            <p>Did an internship of 6 months as DevOps Engineer. Skilled on Docker, Kubernetes, Git, GCP, Jenkins</p> 
                         </div>
                     </div>
                    
