--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	                <div class="col-md-7">
 	                    <div class="block">
 	                        <h1 class="wow fadeInDown" data-wow-delay="0.3s" data-wow-duration=".2s">Thinker,Learner,Explorer! Open for new opportunities.</h1>
-	                        <p class="wow fadeInDown" data-wow-delay="0.5s" data-wow-duration=".5s">Site building is in progress! :)</p>
+	                        <p class="wow fadeInDown" data-wow-delay="0.5s" data-wow-duration=".5s">Hakuna Matata :)</p>
 	                        <div class="wow fadeInDown" data-wow-delay="0.7s" data-wow-duration=".7s">
 	                        	<a class="btn btn-home" href="#about" role="button">About Me</a>
 	                        </div>
@@ -161,18 +161,18 @@
                             <p>Linear regression,Multiple regression,Naive-Bayes,Adaboost,XGBoost,Decision trees,Random Forest,SVM,KNN,K-Nearest Neigbours,MLP,LSTM,CNN,RNN,BERT</p>
                         </div>
                     </div>
-                    <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.3s">
+                    <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="1.2s">
                         <div class="block">
                             <i class="tf-circle-compass"></i>
                             <h3>Known Tools</h3>
                             <p>Tensorflow,Keras,Pandas,NumPy,matplotib,Scikit-learn,OpenCV,NLTK,Spacy,Word2Vec,Doc2Vec,TF-IDF,OpenCV,KNIME,Docker,Kubernetes,Git,</p>
                         </div>
                     </div>
-		    <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="0.3s">
+		    <div class="col-sm-6 col-md-3 wow fadeInLeft" data-wow-delay="1.5s">
                         <div class="block">
                             <i class="tf-circle-compass"></i>
                         	<h3>DevOps</h3>
-                            <p>Did an internship of 6 months as DevOps Engineer. Skilled on Docker, Kubernetes, Git, GCP, Jenkins</p> 
+                            <p>      Did an internship of 6 months as DevOps Engineer. Skilled on Docker, Kubernetes, Git, GCP, Jenkins</p> 
                         </div>
                     </div>
                    
