--- a/index.html
+++ b/index.html
@@ -98,8 +98,15 @@
                         		<h3>Work History</h3>
                         	</div>
                             <p>Experienced Associate with a demonstrated history of working in the non-profit organization management industry. Skilled in Artificial Intelligence, Machine Learning,Supervised and Unsupervised Learning, Predictive modeling, Statistical modeling ,R Programming,Python, Linux Administration, Arduino . Strong professional with a Bachelor of Technology (BTech) focused in Electronics and Communication from Mahaveer Institute of Science &Technology.</p>
-   
-                            
+ 				<div class="sub-heading">
+                        		<h4>Research Associate - IDRBT(SEP 2021 - Present)</h4>
+                        	</div>
+                            	<div class="sub-heading">
+                        		<h4>Associate Analyst - Globallogic(APR 2021 - SEP 2021)</h4>
+                        	</div>
+				<div class="sub-heading">
+                        		<h4>DevOps Engineer - DevOps Enabler&Co(JAN 2020 - JUN 2020)</h4>
+                        	</div>
                         </div>
                     </div>
                     <div class="col-md-5 col-sm-12 wow fadeInLeft" data-wow-delay="0.3s">
